=== Classifieds ===
Authors: Author: Ivan Shaovchev, Andrey Shipilov (Incsub), Arnold Bailey (Incsub)
Plugin Page: http://premium.wpmudev.org/project/classifieds

== Changelog ==

= 2.3.6.2 - 2014-09-03
* Fix contact button not showing in classified

= 2.3.6.1 - 2014-09-02
* Fix warning messages "implode(): Invalid arguments passed..."

= 2.3.6 - 2014-08-29
* Fixed: unexpected EOF and inexistent variable using.
* Changed: Merged CustomPress plugin 1.3.5.7

= 2.3.5.9
* Added: incsub partner code in paypal gateway

= 2.3.5.8
* Fixed: Removed Hard coded template part for loop-taxonomy and loop-author. Using custom_classifieds_template method.

= 2.3.5.7
* Fixed: testing field before accessing it to avoid errors in the single-classifieds template.
* Fixed: declaring global $wp_query used in the page-my-classifieds.php
* Fixed: Undefined index: signin_url in options array. Testing before accessing it.
* Fixed: WPEngine issue. Registration and login form urls not the same as WP uses.
* Changed: custom_classifieds_template method to get template hierarchy (1-theme_dir/classifieds/, 2-plugin_dir/ui-front/general/)
* Changed: Classifieds_Core and Classifieds_Core_BuddyPress using custom_classifieds_template instead of including template file directly
* Fixed: including buddypress templates in templates hierarchy and testing for conditions where template comes with wordpress default page.php.

= 2.3.5.6 - 2014-07-06 Arnold Bailey =
- Added category filter to the [cf_list_categories] shortcode.
- Added switch for counts on category and sub category displays. 
- Added affiliates add-on to Affiliates plugin. 

= 2.3.5.5 Arnold Bailey =
- Fixed problem with captcha on wp-engine hosts

= 2.3.5.4 Arnold Bailey =
- Isolated Network activate BuddyPress to the BP_ROOT_BLOG
- Moved captcha image to a Transient instead of Session

= 2.3.5.3 Arnold Bailey =
* Fixed Attachment custom fields save that got broken in WP 3.5

= 2.3.5.1 Arnold Bailey =